tests/ui/moves/arc-consumed-in-looped-closure.stderr
error[E0382]: the type `Arc` does not implement `Copy`
  --> $DIR/arc-consumed-in-looped-closure.rs:30:22
   |
LL |     let results = Arc::new(Mutex::new(Vec::new()));
   |         ------- this move could be avoided by cloning the original `Arc`, which is inexpensive
...
LL |     for i in 0..20 {
   |     -------------- inside of this loop
LL |         // let results = Arc::clone(&results); // Forgot this.
LL |         pool.execute(move || {
   |                      ^^^^^^^ value moved into closure here, in previous iteration of loop
...
LL |             let mut r = results.lock().unwrap();
   |                         ------- use occurs due to use in closure
   |
   = note: consider using `Arc::clone`
help: consider cloning the value before moving it into the closure
   |
LL ~         let value = results.clone();
LL ~         pool.execute(move || {
LL |
LL |
LL |
LL ~             let mut r = value.lock().unwrap();
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
